--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,14 +1,3 @@
-:root {
-    /*--primary-color:#047aed;*/
-    --primary-color:#fa97ab;
-    --secondary-color:#1c3fa8;
-    /*--dark-color:#002240;*/
-    --dark-color:#b93852;
-    --light-color:#f4f4f4;
-    --success-color:#5cb85c;
-    --error-color:#d9534f;
-}
-
 
 .container{
     max-width: 1100px;
@@ -28,7 +17,7 @@
     display: inline-block;
     padding: 10px 30px;
     cursor: pointer;
-    background-color: var(--primary-color);
+    background-color: var(--transPink-color);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -45,9 +34,9 @@
 
 /*backgrounds & colored buttons*/
 
-.bg-primary,
-.btn-primary{
-    background-color: var(--primary-color);
+.bg-transPink,
+.btn-transPink{
+    background-color: var(--transPink-color);
     color: #fff;
 }
 
@@ -69,8 +58,8 @@
     color: #333;
 }
 
-.bg-primary a,
-.btn-primary a,
+.bg-transPink a,
+.btn-transPink a,
 .bg-secondary a,
 .btn-secondary a,
 .bg-dark a,
@@ -80,8 +69,12 @@
 
 /*text colors*/
 
-.text-primary{
-    color: var(--primary-color);
+.text-transPink{
+    color: var(--transPink-color);
+}
+
+.text-transBlue{
+    color: var(--transBlue-color);
 }
 
 .text-secondary{
@@ -116,6 +109,10 @@
 
 .xl{
     font-size: 4rem;
+}
+
+.responsive-title{
+    font-size: clamp(4rem, 5vw + 1rem, 5.5rem);
 }
 
 .text-center{
